footer added, title changed

--- a/index.html
+++ b/index.html
@@ -6,16 +6,31 @@
     <meta name="viewport" content="width = device-width, initial-scale = 1.0" />
     <link href="app/css/style.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/fc788d89ec.js"></script>
-    <title>فروشگاه آنلاین جوجه</title>
+    <title>فروشگاه چیتکا | فروش آنلاین انواع تخم و جوجه طیور</title>
 </head>
 
 <body>
     <div class="container">
         <div class="col-5 content-container">
-            <h1 class="title">
-                <span class="lined-text">فروشگاه</span> آنلاین<br/> <span class="lined-text">جوجه</span>
-            </h1>
-            <div class="gallery-btn">گالری تصاویر</div>
+            <div class="content-wrapper">
+                <h1 class="title">
+                    فروشگاه چیتکا
+                </h1>
+                <h2 class="sub-title">
+                    فروش آنلاین انواع تخم و جوجه طیور
+                </h2>
+                <div class="gallery-btn">گالری تصاویر</div>
+            </div>
+            <div class="footer">
+                <div class="info-wrapper">
+                    <div class="info-key">تلفن: </div>
+                    <div class="info-value" style="font-size: 1rem;">09302960385</div>
+                </div>
+                <div class="info-wrapper">
+                    <div class="info-key">آدرس: </div>
+                    <div class="info-value">زنجان، هیدج، خیابان...</div>
+                </div>
+            </div>
         </div>
         <div class="col-6 image-container">
             <div class="image-wrapper"></div>
@@ -23,7 +38,7 @@
         <div class="col-1 contact-container">
             <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a>
-            
+
         </div>
     </div>
 </body>
