--- a/index.html
+++ b/index.html
@@ -10,37 +10,80 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="col-5 content-container">
-            <div class="content-wrapper">
-                <h1 class="title">
-                    فروشگاه چیتکا
-                </h1>
-                <h2 class="sub-title">
-                    فروش آنلاین انواع تخم و جوجه طیور
-                </h2>
-                <div class="gallery-btn">گالری تصاویر</div>
-            </div>
-            <div class="footer">
-                <div class="info-wrapper">
-                    <div class="info-key">تلفن: </div>
-                    <div class="info-value" style="font-size: 1rem;">09302960385</div>
-                </div>
-                <div class="info-wrapper">
-                    <div class="info-key">آدرس: </div>
-                    <div class="info-value">زنجان، هیدج، خیابان...</div>
-                </div>
-            </div>
-        </div>
-        <div class="col-6 image-container">
-            <div class="image-wrapper"></div>
-        </div>
-        <div class="col-1 contact-container">
-            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+    <div class="persian">
+        <div class="realtime">
+            <div class="container">
+                <div class="col-5 content-container">
+                    <div class="bg-image"></div>
+                    <div class="content-wrapper">
+                        <h1 class="title">
+                            فروشگاه چیتکا
+                        </h1>
+                        <h2 class="sub-title">
+                            فروش آنلاین انواع تخم و جوجه طیور
+                        </h2>
+                        <div class="gallery-btn" id="galleryBtn">گالری تصاویر</div>
+                    </div>
 
+                    <div class="footer">
+                        <div class="rights">کلیه حقوق این سایت متعلق به فروشگاه چیتکا می باشد.</div>
+                        <a href="https://www.linkedin.com/in/maryam-heydarian-259014172/" target="_blank" class="powered-link">Powered By @MaryamHeydarian</a>
+                    </div>
+                </div>
+                <div class="col-6 image-container">
+                    <div class="image-wrapper"></div>
+                </div>
+                <div class="col-1 contact-container">
+                    <a href="http://instagram.com/forosh_joje" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="http://telegram.me/abbas_yar97" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+                    <a href="#" class="info-icon">
+                        <i class="fas fa-angle-double-right arrow-icon"></i>
+                        <i class="fas fa-info"></i>
+                        <div class="drop-right">
+                            <div class="drp-row" style="direction: ltr;text-align: right;">09302960385 <i
+                                    class="fas fa-phone fa-fw"></i></div>
+                            <div class="drp-row"><i class="fas fa-map-marker-alt fa-fw"></i>زنجان - ابهر - خرمدره -
+                                صایین قلعه - هیدج
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div class="slideshow-container" id="slidShow">
+        
+        <span class="times" id="times">&times;</span>
+
+        <div class="mySlides fade">
+            <img src="app/images/img1.jpg">
+            <div class="text">قوغاز قهوه ای</div>
+        </div>
+
+        <div class="mySlides fade">
+            <img src="app/images/img2.jpg">
+            <div class="text">قوغاز اکراینی</div>
+        </div>
+
+        <div class="mySlides fade">
+            <img src="app/images/img3.jpg">
+            <div class="text">قوغاز سفید</div>
+        </div>
+
+        <a class="prev" id="minesSlide">&#10094;</a>
+        <a class="next" id="plusSlide">&#10095;</a>
+
+    </div>
+
+    <script src="app/js/app.js"></script>
+    <script src="app/js/jquery-3.2.1.min.js"></script>
+    <script src="app/js/persianNum.jquery-2.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('body').persianNum();
+        })
+    </script>
 </body>
 
 </html>
